@@ -1,30 +1,30 @@
 package com.acsredux.lib.testutil;
 
-import static com.acsredux.lib.testutil.TestData.TEST_ARTICLE;
+import static com.acsredux.lib.testutil.TestData.TEST_PHOTO_DIARY;
+import static com.acsredux.lib.testutil.TestData.TEST_PHOTO_DIARY_CREATED;
 
-import com.acsredux.core.articles.ArticleService;
-import com.acsredux.core.articles.commands.BaseArticleCommand;
-import com.acsredux.core.articles.values.Article;
-import com.acsredux.core.articles.values.ArticleID;
 import com.acsredux.core.base.Event;
+import com.acsredux.core.content.ContentService;
+import com.acsredux.core.content.commands.BaseContentCommand;
+import com.acsredux.core.content.values.Content;
+import com.acsredux.core.content.values.ContentID;
 import com.acsredux.core.members.values.MemberID;
-import java.util.Collections;
 import java.util.List;
 
-public class MockArticleService implements ArticleService {
+public class MockArticleService implements ContentService {
 
   @Override
-  public Article getArticle(ArticleID x) {
-    return TEST_ARTICLE;
+  public Content getContent(ContentID x) {
+    return TEST_PHOTO_DIARY;
   }
 
   @Override
-  public List<Article> findArticlesByMemberID(MemberID x) {
-    return List.of(TEST_ARTICLE);
+  public List<Content> findArticlesByMemberID(MemberID x) {
+    return List.of(TEST_PHOTO_DIARY);
   }
 
   @Override
-  public List<Event> handle(BaseArticleCommand x) {
-    return Collections.emptyList();
+  public List<Event> handle(BaseContentCommand x) {
+    return List.of(TEST_PHOTO_DIARY_CREATED);
   }
 }
